<resources>
    <string name="app_name">ToDo App</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="my_profile_title">My Profile</string>
    <string name="create_category_title">Create Category</string>
    <string name="create">CREATE</string>
    <string name="category_name">Category Name</string>
    <string name="no_categories_are_available">No Categories are available, please add one</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">Todo Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="add_todo">Add ToDo</string>
    <string name="et_pick_date">Pick Date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="date">Date: </string>
    <string name="hello_message_user">Hello user</string>
    <string name="categories">Categories:</string>
</resources>